unpackaged/main/default/objects/Interface_monitoring__c/Interface_monitoring__c.object-meta.xml
<CustomObject>
    <label>Interface monitoring</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interfaces monitoring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>