unpackaged/main/default/objects/Interface_monitoring__c/fields/InterfaceName__c.field-meta.xml
<CustomField>
    <fullName>InterfaceName__c</fullName>
    <label>Interface Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BusinessPartner</fullName>
            </value>
            <value>
                <fullName>WorkOrder</fullName>
            </value>
            <value>
                <fullName>Kwote</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>GradeWebhook</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
                <isActive>false</isActive>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contrat</fullName>
                <isActive>false</isActive>
                <label>Contrat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>