unpackaged/main/default/objects/Interface_monitoring__c/fields/MessageId__c.field-meta.xml
<CustomField>
    <fullName>MessageId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>