unpackaged/main/default/objects/Interface_monitoring__c/fields/OutgoingMessage__c.field-meta.xml
<CustomField>
    <fullName>OutgoingMessage__c</fullName>
    <label>Outgoing Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>