unpackaged/main/default/objects/Interface_monitoring__c/fields/TargetSystem__c.field-meta.xml
<CustomField>
    <fullName>TargetSystem__c</fullName>
    <label>Target System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IGLOO</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>