unpackaged/main/default/objects/Interface_monitoring__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InterfaceName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>MessageId__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>